# py-earth

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  agents.md  appveyor.yml  description.md  gemini.md  jules.md  pyproject.toml  pytest.ini  roadmap.md  setup.cfg  setup.py  versioneer.py
.github/workflows/: ci.yml
benchmarks/: fast.py  pyearth_vs_earth.py  qr_update_benchmark.md  qr_update_benchmark.py
conda-recipe/: meta.yaml  move-conda-package.py  run_test.py
doc/: conf.py  content.rst  generate_figures.py  xkcdify.py
examples/: plot_derivatives.py  plot_feature_importance.py  plot_linear_function.py  plot_missing_data_problem.py  plot_multicolumn.py  plot_output_weight.py  plot_sine_wave.py  plot_sine_wave_2d.py  plot_v_function.py  return_sympy.py
nose/: __init__.py  tools.py
pyearth/: __init__.py  _basis.c  _basis.pxd  _basis.pyx  _forward.c  _forward.pxd  _forward.pyx  _knot_search.c  _knot_search.pxd  _knot_search.pyx  _pruning.c  _pruning.pxd  _pruning.pyx  _qr.c  _qr.pxd  _qr.pyx  _record.c  _record.pxd  _record.pyx  _types.c  _types.pxd  _types.pyx  _util.c  _util.pxd  _util.pyx  _version.py  earth.py  export.py  longintrepr.h
pyearth/test/: __init__.py  pytest_tools.py  test_earth.py  test_export.py  test_forward.py  test_knot_search.py  test_pruning.py  test_qr.py  test_util.py  testing_utils.py
pyearth/test/basis/: __init__.py  base.py  test_basis.py  test_constant.py  test_hinge.py  test_linear.py  test_missingness.py  test_smoothed_hinge.py
pyearth_python/: README.md  __init__.py  earth.py
